--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "yelpCamp",
+  "name": "YelpCamp",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
-    "joi": "^17.3.0",
+    "express-session": "^1.17.1",
+    "joi": "^17.2.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.10.4"
   }
 }
